kubernetes/apps/paperless-drali/paperless/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-headless
  namespace: paperless-drali
spec:
  clusterIP: None
  selector:
    app: paperless
  ports:
    - port: 8000
