kubernetes/apps/paperless-drali/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-web
  namespace: paperless-drali
spec:
  selector:
    app: paperless
  ports:
    - port: 8000
