kubernetes/apps/paperless-drali/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless-drali
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dralibjj.kostikidis.net
      secretName: dralibjj-kostikidis-net-tls
  rules:
    - host: dralibjj.kostikidis.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-web
                port:
                  number: 8000
