kubernetes/apps/paperless-drali/paperless/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paperless
  namespace: paperless-drali
spec:
  podSelector:
    matchLabels:
      app: paperless
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ai
        - podSelector:
            matchLabels:
              app: paperless-gpt
      ports:
        - port: 8000
  egress:
    - ports:
        - port: 5432
      to:
        - podSelector:
            matchLabels:
              app: postgres
    - ports:
        - port: 6379
      to:
        - podSelector:
            matchLabels:
              app: redis
    - ports:
        - port: 9998
      to:
        - podSelector:
            matchLabels:
              app: tika
    - ports:
        - port: 3000
      to:
        - podSelector:
            matchLabels:
              app: gotenberg
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    - ports:
        - port: 443
        - port: 80
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
